Refine front end/back end terminology and improve smooth scroll
Standardized 'front end' and 'back end' terminology across index.html and updated navigation/menu labels for clarity. Enhanced the smooth scrolling behavior in index.js by adding an offset and preventing scroll-driven active updates during programmatic scrolling. Adjusted .divider margin in style.css for improved section separation.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
                 <img src="assets/propic.png" alt="Profile Picture">
                 <h1>Nicola Abati</h1>
                 <h2>Full Stack Developer</h2>
-                <p class="bio">I build accessible, performant frontends and delightful user experiences. I focus on modern HTML, CSS and
+                <p class="bio">I build accessible, performant front ends and delightful user experiences. I focus on modern HTML, CSS and
                     JavaScript.</p>
             </div>
             <nav class="side-menu" aria-label="Main navigation">
                 <ul>
                     <li><a href="#resume">About me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Front End</a></li>
+                    <li><a href="#experience">Back End</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -64,9 +64,9 @@
                 <p>Hi, my name is Nicola.</p>
                 <p>I’m a software developer from Rimini, Italy.</p>
                 <p>I first discovered my love for coding during my studies in electronics and telecommunications at school.</p>
-                <p>After graduating in psychology at University of Bologna I started out as a frontend developer, focusing on mastering
+                <p>After graduating in psychology at University of Bologna I started out as a front end developer, focusing on mastering
                     the basics (HTML, CSS, and JS) before eventually moving on to modern frameworks. Now, at Lasersoft, I’ve had the chance
-                    to deepen my knowledge of both front-end and server-side development, tackling several aspects of my job (development,
+                    to deepen my knowledge of both front end and server-side development, tackling several aspects of my job (development,
                     deployment, application security and more). I welcome every little challenge that my job presents me daily as a learning
                     opportunity.</p>
                 <p>In my spare time I still love building websites, sticking to the fundamental tools that I love and allow me to craft
@@ -78,7 +78,7 @@
             <div class="divider" role="separator" aria-orientation="horizontal"></div>
             <section id="projects" class="panel">
                 <h2>Front End</h2>
-                <p>When working on front-end solutions, I focus on performance and simplicity.</p>
+                <p>When working on front end solutions, I focus on performance and simplicity.</p>
                 <p>I enjoy working with vanilla technologies, as they allow me to fully understand and control every aspect of what I
                     create, keeping applications lightweight and efficient.</p>
                 <p>However, I am comfortable using modern frameworks when a project requires them, and I can quickly adapt to different
@@ -86,10 +86,12 @@
                 <p>My goal is to deliver simple, intuitive and maintainable interfaces, making the most out of each tool without
                     unnecessary complexity.
                 </p>
-                <p>I believe that well-designed front-end development is about finding the right balance between simplicity,
+                <p>I believe that well-designed front end development is about finding the right balance between simplicity,
                     flexibility, and scalability, while ensuring an excellent user experience.</p>
+                <br>
+                <i class="stack-info">Explore my front end stack by clicking the icons below</i>
                 <div class="tech-card">
-                    <i class="stack-info">Explore my front end stack by clicking the icons below</i>
+                    <i class="stack-info">Core Stack: what I use everyday in production</i>
                     <div>
                         <img
                             class="tech-logo"
@@ -118,7 +120,7 @@
                             alt="TypeScript"
                             role="button"
                             tabindex="0"
-                            data-desc="TypeScript: adding structure and reliability to front-end projects."/>
+                            data-desc="TypeScript: adding structure and reliability to front end projects."/>
                         <img
                             class="tech-logo"
                             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg"
@@ -133,6 +135,11 @@
                             role="button"
                             tabindex="0"
                             data-desc="Yarn: package management, scripts and publishing."/>
+                    </div>
+                </div>
+                <div class="tech-card">
+                    <i class="stack-info">Side Stack: tools I use for personal projects and experiments.</i>
+                    <div>
                         <img
                             class="tech-logo"
                             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/eleventy/eleventy-original.svg"
@@ -146,7 +153,14 @@
                             alt="Next.js"
                             role="button"
                             tabindex="0"
-                            data-desc="Next.js: ideal when I need server-side rendering (SSR)"/>
+                            data-desc="Next.js: ideal when I need server-side rendering (SSR)."/>
+                        <img
+                            class="tech-logo"
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/alpinejs/alpinejs-original.svg"
+                            alt="Alpine.js"
+                            role="button"
+                            tabindex="0"
+                            data-desc="Alpine.js: gives framework-like functionality to simple projects, without the overhead."/>
                         <img
                             class="tech-logo"
                             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/wordpress/wordpress-plain.svg"
@@ -155,13 +169,6 @@
                             tabindex="0"
                             data-desc="WordPress: not my personal favorite, but invaluable for speeding up work and simplifying collaboration with
                                 agencies, marketing teams, and clients."/>
-                        <img
-                            class="tech-logo"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/alpinejs/alpinejs-original.svg"
-                            alt="Alpine.js"
-                            role="button"
-                            tabindex="0"
-                            data-desc="Alpine.js: gives framework-like functionality to simple projects, without the overhead."/>
                         <img
                             class="tech-logo"
                             style="filter: invert(1);"
@@ -182,8 +189,8 @@
             </section>
             <div class="divider" role="separator" aria-orientation="horizontal"></div>
             <section id="experience" class="panel">
-                <h2>Back end</h2>
-                <p>I have worked on back-end systems ranging from small services to full-scale management applications, which has taught
+                <h2>Back End</h2>
+                <p>I have worked on back end systems ranging from small services to full-scale management applications, which has taught
                     me that the key to delivering solid and maintainable solutions is selecting the right tools and architectural patterns
                     for each situation, rather than automatically following the latest trends.</p>
                 <p>Over the years, this approach has allowed me to build systems that are not only reliable and efficient but also clear
@@ -191,7 +198,7 @@
                 <p>I focus on practical, well-structured solutions that balance functionality, maintainability, and scalability,
                     ensuring a smooth experience for both users and the teams that maintain the code over time.</p>
                 <div class="tech-card">
-                    <i class="stack-info">Explore my back-end stack by clicking the icons below</i>
+                    <i class="stack-info">Explore my back end stack by clicking the icons below</i>
                     <div>
                         <img
                             class="tech-logo"
@@ -199,7 +206,7 @@
                             alt=".NET Core"
                             role="button"
                             tabindex="0"
-                            data-desc=".NET Core for enterprise backends and microservices."/>
+                            data-desc=".NET Core for enterprise back ends and microservices."/>
                         <img
                             class="tech-logo"
                             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/entityframeworkcore/entityframeworkcore-original.svg"
@@ -245,6 +252,7 @@
                     </div>
                 </div>
             </section>
+            <div class="divider" role="separator" aria-orientation="horizontal"></div>
             <section id="skills" class="panel">
                 <h2>Skills</h2>
                 <ul>
