Add favicon and update content and styles
Added a favicon to the site and updated index.html to reference it. Improved project descriptions, removed unused or commented-out code and styles (including the cursor light effect), and made minor style adjustments for better responsiveness and visual consistency.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Nicola Abati</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Social / preview image (replace with your public image at assets/preview.png) -->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <!-- TODO: meta tags -->
     <link rel="image_src" href="assets/preview.png" />
     <meta
       name="description"
@@ -35,8 +36,7 @@
         <h1>Nicola Abati</h1>
         <h2>Full Stack Developer</h2>
         <!-- <p class="bio">
-          I build accessible, performant front ends and delightful user
-          experiences. I focus on modern HTML, CSS and JavaScript.
+          TODO: brief description
         </p> -->
       </div>
       <nav class="side-menu" aria-label="Main navigation">
@@ -161,16 +161,9 @@
           and applications lightweight and efficient.
         </p>
         <p>
-          However, I am comfortable using modern frameworks when a project
+          However, I am comfortable with using modern frameworks when a project
           requires them, and I can quickly adapt to different stacks and
           development environments.
-        </p>
-        <p>
-          I work with a variety of rendering strategies depending on project
-          needs, including client-side rendering (CSR), server-side rendering
-          (SSR), incremental static regeneration (ISR), and fully static sites.
-          Choosing the right approach allows me to optimize performance,
-          scalability, and user experience for each application.
         </p>
         <p>
           My goal is to deliver simple, intuitive and maintainable interfaces,
@@ -520,9 +513,9 @@
             <h3>Muta Animation - Website</h3>
           </a>
           <p class="project-desc">
-            Muta Animation: a website for an animation studio, built with fully
-            static templates using 11ty and showcasing their stunning visual
-            assets.
+            Muta Animation: A website for an animation studio, built with fully
+            static 11ty templates using Nunjucks. Designed to beautifully
+            showcase their stunning visual assets.
           </p>
           <a
             class="project-cta"
