--- a/index.html
+++ b/index.html
@@ -591,6 +591,7 @@
             >
           </p>
           <p class="copyright">&copy; 2026 Nicola Abati</p>
+          <i>Made with vanilla HTML, CSS & JavaScript</i>
         </div>
       </footer>
     </section>
